<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:useDefaultMargins="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/activity_main_player_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/activity_main_add_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/activity_main_add_player" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_main_dialog_grid_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:onClick="onDialogSize"
            android:text="@string/activity_main_dialog_grid_size"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/activity_main_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPlay"
            android:text="@string/activity_main_play" />

    </LinearLayout>

</LinearLayout>